--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "dotenv": "^16.5.0",
+    "fastify": "^5.3.3",
     "fs": "^0.0.1-security",
     "puppeteer": "^24.9.0"
   }
