--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.3.3",
     "fs": "^0.0.1-security",
+    "node-windows": "^1.0.0-beta.8",
     "puppeteer": "^24.9.0"
   }
 }
