--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "fastify": "^5.3.3",
     "fs": "^0.0.1-security",
     "node-windows": "^1.0.0-beta.8",
-    "puppeteer": "^24.9.0"
+    "puppeteer": "^24.9.0",
+    "winston": "^3.17.0"
   }
 }
